# NetSPOApi

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
examples/: test.py
netspoapi/: __init__.py  api.py  base.py  methods.py  models.py  netspoapi.py  schemas.py
netspoapi/client/: __init__.py  base.py  student.py  teacher.py
netspoapi/exceptions/: __init__.py  factory.py
netspoapi/loader/: http_loader.py
netspoapi/netspoapi/: __init__.py  netspoapi.py
netspoapi/netspoapi/loader/: __init__.py  errors.py
netspoapi/netspoapi/utils/: base_url_join.py
netspoapi/requester/: __init__.py  http_requester.py  structures.py
netspoapi/utils/: __init__.py  base_url_join.py  utils.py
tests/: test.py
