[tool.poetry]
name = "netspoapi"
version = "0.1.0"
description = "Парсер сетевого города"
authors = ["Ownerya <azverev587@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
