[tool.poetry]
name = "netspoapi"
version = "1.0.0"
description = "Парсер сетевого города"
authors = [
    "werdeengod <azverev587@gmail.com>"
]
license = "Private"
readme = "README.md"
packages = [
    {include = "netspoapi"}
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
pydantic = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
